# namu

./: .gitignore  meson.build
dependencies/: .gitignore  README.md  build-beagle.sh  build-ncl.sh  get-boost.sh  get-eigen.sh
include/namu/: asrv.hpp  data.hpp  data_type.hpp  error.hpp  genetic_code.hpp  likelihood.hpp  model.hpp  namu.hpp  node.hpp  partition.hpp  qmatrix.hpp  split.hpp  string_util.hpp  tmp.hpp  tree.hpp  tree_io.hpp  tree_manip.hpp  tree_summary.hpp
include/phycoeval/: error.hpp  node.hpp  string_util.hpp  tree.hpp  tree_io.hpp  tree_manip.hpp
src/: main.cpp  meson.build
tests/: meson.build  test_error.cpp  test_node.cpp  test_string_util.cpp  test_tree.cpp
tests/data/: rbcL-likelihood-test.conf  rbcL-model.conf  rbcL-multitype.conf  rbcl738.conf  rbcl738nj-rooted-bifurcating.tre
